# kommunity

./: Dockerfile  app.py  pyproject.toml
.arkitekt/: builds.yaml  deployments.yaml  manifest.yaml
